# gate_partitioning

./: README.md  gate_assignment.py  pyproject.toml
COI/: adder.adjlist  adder.edgelist  adder.int.edgelist  adder.json
COI/adder/: optimal gate assignments_trajectory_0.txt  optimal gate assignments_trajectory_1.txt  optimal gate assignments_trajectory_2.txt
COI/adder/C_1e-5_t_30k/: optimal gate assignments_trajectory_0.txt  optimal gate assignments_trajectory_1.txt  optimal gate assignments_trajectory_2.txt
COI/adder/C_2e-5_t_20k/: optimal gate assignments_trajectory_0.txt  optimal gate assignments_trajectory_1.txt  optimal gate assignments_trajectory_2.txt
COI/adder/C_3e-5_t_20k/: optimal gate assignments_trajectory_0.txt  optimal gate assignments_trajectory_1.txt  optimal gate assignments_trajectory_2.txt
COI/adder/C_5e-5_t_20k/: optimal gate assignments_trajectory_0.txt  optimal gate assignments_trajectory_1.txt  optimal gate assignments_trajectory_2.txt
COI/adder/timesteps 100k/: optimal gate assignments_trajectory_0.txt  optimal gate assignments_trajectory_1.txt  optimal gate assignments_trajectory_10.txt  optimal gate assignments_trajectory_2.txt  optimal gate assignments_trajectory_3.txt  optimal gate assignments_trajectory_4.txt  optimal gate assignments_trajectory_5.txt  optimal gate assignments_trajectory_6.txt  optimal gate assignments_trajectory_7.txt  optimal gate assignments_trajectory_8.txt  optimal gate assignments_trajectory_9.txt
