[tool.poetry]
name = "gate_partitioning"
version = "0.1.0"
description = ""
authors = ["Jing Zhang"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.1"
networkx = "^2.5"
metis = "^0.2a4"
mpmath = "^1.1.0"
scipy = "^1.5.2"
numba = "^0.51.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
